[gd_scene load_steps=18 format=2]

[ext_resource path="res://Skills/Enemy_hitbox.gd" type="Script" id=1]
[ext_resource path="res://Skills/Hitbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Skills/Hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Sprites/spritesheet (7).png" type="Texture" id=4]
[ext_resource path="res://Mobs_and_NPC/Lizard2.gd" type="Script" id=5]
[ext_resource path="res://Skills/Hurtbox.gd" type="Script" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 18.2, 26.4658 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 24.686, 29.2456 )

[sub_resource type="Animation" id=3]
resource_name = "En att"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Enemysprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 30, 30, 31, 32, 33, 34, 30 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Area2D/CollisionShape2D2:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=4]
resource_name = "en die"
length = 0.85
tracks/0/type = "value"
tracks/0/path = NodePath("Enemysprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7, 8, 9, 15, 16, 17, 18 ]
}

[sub_resource type="Animation" id=5]
resource_name = "en hurt"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Enemysprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 50, 51, 52, 36, 36 ]
}

[sub_resource type="Animation" id=6]
resource_name = "en idle"
length = 1.6
tracks/0/type = "value"
tracks/0/path = NodePath("Enemysprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.3, 0.5, 0.7, 0.9, 1.1, 1.3, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 25, 26, 27, 28, 29, 35, 36, 37 ]
}

[sub_resource type="Animation" id=7]
resource_name = "en walk"
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Enemysprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 10, 11, 12, 13, 14, 20, 21 ]
}

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 106.066, 78.8941 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 30.4101, 38.9747 )

[sub_resource type="CapsuleShape2D" id=10]

[sub_resource type="CapsuleShape2D" id=11]

[node name="Lizard" type="KinematicBody2D"]
collision_layer = 4
script = ExtResource( 5 )

[node name="Enemysprite" type="Sprite" parent="."]
position = Vector2( -0.463287, -36.5433 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 4 )
vframes = 6
hframes = 10
frame = 31

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Hurtbox" parent="." instance=ExtResource( 3 )]
scale = Vector2( 1.48, 1.28 )
collision_layer = 32
collision_mask = 8
script = ExtResource( 6 )

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
shape = SubResource( 2 )

[node name="Enemyanim" type="AnimationPlayer" parent="."]
"anims/En att" = SubResource( 3 )
"anims/en die" = SubResource( 4 )
"anims/en hurt" = SubResource( 5 )
"anims/en idle" = SubResource( 6 )
"anims/en walk" = SubResource( 7 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 0.463, 1.0012 )
rotation = 1.5708
scale = Vector2( 10, 0.4 )
enabled = true

[node name="RayCast2D2" type="RayCast2D" parent="."]
position = Vector2( -20, 15.415 )
scale = Vector2( 1, 0.3 )
enabled = true

[node name="backhit" type="Area2D" parent="."]
position = Vector2( 50, -0.976 )
scale = Vector2( 0.25, 0.5 )
collision_layer = 0
collision_mask = 2
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="backhit"]
shape = SubResource( 8 )

[node name="Player_detect" type="Area2D" parent="."]
position = Vector2( -35, 0 )
scale = Vector2( 1.3, 1 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player_detect"]
position = Vector2( 2.31645, -9.72912 )
shape = SubResource( 9 )

[node name="Area2D" parent="." instance=ExtResource( 2 )]
position = Vector2( -50, 0 )
collision_layer = 64
collision_mask = 16
script = ExtResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
rotation = 1.5708
scale = Vector2( 2.3, 2.5 )
shape = SubResource( 10 )
disabled = true

[node name="Area2D2" parent="." instance=ExtResource( 2 )]
collision_layer = 64
collision_mask = 16
script = ExtResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D2"]
shape = SubResource( 11 )
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="area_entered" from="Hurtbox" to="Hurtbox" method="_on_Hurtbox_area_entered"]
[connection signal="animation_finished" from="Enemyanim" to="." method="_on_Enemyanim_animation_finished"]
[connection signal="animation_started" from="Enemyanim" to="." method="_on_Enemyanim_animation_started"]
[connection signal="body_entered" from="backhit" to="." method="_on_backhit_body_entered"]
[connection signal="body_entered" from="Player_detect" to="." method="_on_Player_detect_body_entered"]
[connection signal="body_exited" from="Player_detect" to="." method="_on_Player_detect_body_exited"]

[editable path="Hurtbox"]
